crates/core/tests/ui/es_zero_bindings.stderr
error: `#[derive(EventSourced)]` requires at least one `#[batpak(event = T, handler = h)]` binding
  --> tests/ui/es_zero_bindings.rs:10:8
   |
10 | struct State {
   |        ^^^^^
